--- a/front-end/reactNaPratica/jsx-tutorial/src/index.css
+++ b/front-end/reactNaPratica/jsx-tutorial/src/index.css
@@ -5,8 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(170, 161, 150);
-  color: crimson;
+  background-color: rgb(233, 225, 215);
+  color: rgb(43, 39, 39);
 }
 
 code {
